@@ -1,5 +1,8 @@
 Release Note
 
+* 1/22/2015
+  * improved SQL in duplicateFilesForReuse 
+
 * 1/20/2015
   * using max when calculating memory requirements based on scouts
   * fixed getTobeProcessed for secondary with nFilesTobeUsed=nFilesUsed
